tests/vertical-slice/reject/builtin_payload_enum_equality.hew
fn main() {
    let a: Option<i64> = Some(1);
    let b: Option<i64> = Some(2);
    let _ = a == b;
}
